Added: Loading Screen

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
     />
     <title>WebVR-HomeTour</title>
   </head>
-  <body></body>
+  <body>
+    <section id="loading-screen">
+      <div id="loader"></div>
+    </section>
+  </body>
 </html>
